# plant-monitor-esp32-firmware

./: .gitignore  CMakeLists.txt  sdkconfig
main/: CMakeLists.txt  idf_component.yml  plant-monitor-esp32-firmware.c
main/battery/: battery.c  battery.h
main/bh1750/: bh1750.c  bh1750.h
main/bluetooth/: ble_setup.cpp  ble_setup.h
main/bme280/: bme280.c  bme280.h
main/boot/: boot.c  boot.h
main/helpers/: time_helper.c  time_helper.h
main/i2c/: i2c.c  i2c.h
main/led/: led.c  led.h
main/wifi/: api.c  api.h  wifi.c  wifi.h
